cargo-features = ["resolver"]

[package]
name = "sel-server"
version = "0.1.0"
authors = ["Sean Tyler Myers <seanmyers0608@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coinbase-pro-rs = "0.7.1"
async-trait = "0.1.51"
hyper = { version = "0.14.11", features = ["full"]}
dynomite = "0.10.0"
tokio = {version = "1.0.2", features = ["full"]}